# omt

./: CMakeLists.txt  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
